una version de actualizacion del titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página del proyecto Git</title>
     <link rel="stylesheet" href="./css/estilos.css">
+
 </head>
+
     <title>El título del post</title>
 <body>
+    <header>
+        <H1>Comision de juzgamiento - Atlesitmo Santander</H1>
+        </header>
     <h1>Aquí vamos a hacer un blog post</h1>
     <p>Y este es el parrafo de inicio</p>
     
